# ai-world-blog

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  assistant.md  check_all.py  check_browser_id.py  check_data_sources.py  check_file.py  check_help.py  check_help_ds.py  check_notion_methods.py  check_parent.py  check_status.py  check_type.py  check_urls.py  check_version.py  check_version_header.py  find_by_title.py  find_db.py  get_final_post.py  inspect_notion.py  inspect_page.py  list_blocks.py  list_pages.py  output.txt  query_ds.py  search_notion.py  test_datasource.py  test_httpx.py  test_notion.py  test_raw.py  urls_output.txt  vercel.json
.claude/commands/: create-post.md
blog/: README.md  astro.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml
docs/: automation.md  deployment-checklist.md  deployment-lessons.md  notion-integration-guide.md  notion-setup.md  research-reference.md  setup-notion-statuses.md  setup.md  voice-guide.md
generator/: .env.example  config.yaml  generate_all_posts.py  pyproject.toml  test_full_generation.py  test_notion_workflow.py
generator/prompts/: comparison.md  outline.md  self_review.md  system_voice.md  tool_explainer.md  tutorial.md  use_case.md
generator/src/: claude_client.py  cli.py  config.py  dedup.py  firecrawl_client.py  image_gen.py  image_search.py  markdown_writer.py  notion_client.py  pipeline.py  post_types.py  queue_manager.py  slug.py
generator/state/: processed.json  queue.yaml
generator/tests/: test_dedup.py  test_markdown_writer.py  test_slug.py
logs/: assistant-log.md
(+78 files in other folders)
